# C-projects

./: README.md
Arrow shoote/: Arrow shoote.sln
Arrow shoote/Arrow shoote/: Arrow shooter.csproj  Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs
Arrow shoote/Arrow shoote/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
Breakout Game/: Breakout Game.sln
Breakout Game/Breakout Game/: Breakout Game.csproj  Form1.Designer.cs  Form1.cs
Breakout Game/Breakout Game/Properties/: AssemblyInfo.cs
CarRacing/: CarRacing.sln
CarRacing/CarRacing/: App.config  CarRacing.csproj  Form1.Designer.cs  Form1.cs  Form1.resx  GameOver.Designer.cs  GameOver.cs  MasiniDataSet.Designer.cs  MasiniDataSet.cs  MasiniDataSet.xsd  MasiniDataSet.xss  Program.cs
CarRacing/CarRacing/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs  Settings.settings
Catch the Butterflies/: Catch the Butterflies.sln
Catch the Butterflies/Catch the Butterflies/: Catch the Butterflies.csproj  Form1.Designer.cs  Form1.cs  Form1.resx  Game.Designer.cs  Game.cs  Game.resx  Program.cs
Catch the Butterflies/Catch the Butterflies/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
Dice Roller/: Dice Roller.sln
Dice Roller/Dice Roller/: Dice Roller.csproj  Form1.Designer.cs  Form1.cs  Program.cs
Dice Roller/Dice Roller/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx
Examen UBB/: Examen UBB.sln
Examen UBB/Examen UBB/: Admin.Designer.cs  Admin.cs  App.config  Examen UBB.csproj  Examen.Designer.cs  Examen.cs  Form1.Designer.cs  Form1.cs  GrileDataSet.Designer.cs  GrileDataSet.cs  GrileDataSet.xsd  GrileDataSet.xss  Pre-examen.Designer.cs  Pre-examen.cs  Program.cs  Rezultate_antrenament.Designer.cs  Rezultate_antrenament.cs  SelectareCategorii.Designer.cs  SelectareCategorii.cs  Vec.cs
Examen UBB/Examen UBB/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs  Settings.settings
Fobal/: Fobal.sln
Fobal/Fobal/: Fobal.csproj  Form1.Designer.cs  Form1.cs  Program.cs
Fobal/Fobal/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
Home Buget App/: CMakeLists.txt  main.cpp
Home Buget App/controller/: BudgetController.cpp  BudgetController.h
Home Buget App/controller/commands/: AddCommand.cpp  AddCommand.h  Command.h  RemoveCommand.cpp  RemoveCommand.h  UpdateCommand.cpp  UpdateCommand.h
Home Buget App/controller/filters/: AmountFilter.cpp  AmountFilter.h  CategoryFilter.cpp  CategoryFilter.h  CompositeFilter.cpp  CompositeFilter.h  DateFilter.cpp  DateFilter.h  FilterStrategy.h  TypeFilter.cpp  TypeFilter.h
Home Buget App/models/: BudgetItem.cpp  BudgetItem.h
Home Buget App/repository/: BaseRepository.h  CsvRepository.cpp  CsvRepository.h  JsonRepository.cpp  JsonRepository.h
Home Buget App/tests/: test_controller.cpp  test_repository.cpp
Home Buget App/ui/: MainWindow.cpp  MainWindow.h
Jocuri/: Jocuri.sln
Jocuri/Jocuri/: Alege_joc.Designer.cs  Alege_joc.cs  Animatie.Designer.cs  Animatie.cs  Animatie.resx  App.config  Autentificare.Designer.cs  Autentificare.cs  Inregistrare.Designer.cs  Inregistrare.cs  JocLitere.Designer.cs  JocLitere.cs  JocLitere.resx  JocMemorie.Designer.cs  JocMemorie.cs  JocMemorie.resx  Jocuri.csproj  JocuriDataSet.Designer.cs  JocuriDataSet.xsd  PrimQR.Designer.cs  PrimQR.cs  Program.cs
Jocuri/Jocuri/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs  Settings.settings
MemoryGame/: MemoryGame.sln
MemoryGame/MemoryGame/: MemoryGame.csproj
MemoryGame/MemoryGame/Properties/: AssemblyInfo.cs
Paint/: Paint.sln
Paint/Paint/: Form1.Designer.cs  Form1.cs  Paint.csproj
Paint/Paint/Properties/: AssemblyInfo.cs
Penalty/: Penalty.sln
Penalty/Penalty/: Form1.Designer.cs  Form1.cs  Penalty.csproj  Program.cs
Penalty/Penalty/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
Puzzle/: Puzzle.sln
Puzzle/Puzzle/: Form1.Designer.cs  Form1.cs  Form1.resx  Puzzle.csproj
Puzzle/Puzzle/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx
Snake/: Snake.sln
Snake/Snake/: Form1.Designer.cs  Form1.cs  Form1.resx  Settings.cs  Snake.csproj
Snake/Snake/Properties/: AssemblyInfo.cs
Zombie Shooter/: Zombie Shooter.sln
Zombie Shooter/Zombie Shooter/: Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  Zombie Shooter.csproj
Zombie Shooter/Zombie Shooter/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx
chat_project/: CMakeLists.txt  pipe_chat  pipe_chat.c
server_project/: CMakeLists.txt  echo_client  echo_client.c  echo_server  echo_server.c
